Closed Bug 1683840 Opened 3 years ago Closed 3 years ago

nrappkit: argument 1 of type ‘char[128]’ with mismatched bound [-Werror=array-parameter=]

Categories

(Developer Infrastructure :: Source Code Analysis, defect)

defect

Tracking

(firefox86 fixed)

RESOLVED FIXED
86 Branch
Tracking Status
firefox86 --- fixed

People

(Reporter: Sylvestre, Assigned: Sylvestre)

References

Details

Attachments

(1 file)

0:02.05 In file included from Unified_c_nrappkit0.c:29:
0:02.05 /root/firefox-gcc-last/dom/media/webrtc/transport/third_party/nrappkit/src/registry/registry_local.c:177:31: error: argument 1 of type ‘char[128]’ with mismatched bound [-Werror=array-parameter=]
0:02.05 177 | nr_reg_local_iter(NR_registry prefix, int (*action)(void *ptr, r_assoc_iterator *iter, char *prefix, char *name, nr_registry_node *node), void *ptr)
0:02.05 | ^
0:02.05 In file included from Unified_c_nrappkit0.c:29:
0:02.05 /root/firefox-gcc-last/dom/media/webrtc/transport/third_party/nrappkit/src/registry/registry_local.c:168:36: note: previously declared as ‘char *’
0:02.05 168 | static int nr_reg_local_iter(char *prefix, int (*action)(void *ptr, r_assoc_iterator *iter, char *prefix, char *name, nr_registry_node *node), void *ptr);
0:02.05 | ^

I am aware they are third party code. pushing to keep a trace

Assignee: nobody → sledru
Status: NEW → ASSIGNED
Pushed by sledru@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c852914af01f
Fix some array-parameter errors found by gcc 11 r=necko-reviewers,dragana
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
Blocks: 1714004
Product: Firefox Build System → Developer Infrastructure
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: