Bug 1683840 - Fix some array-parameter errors found by gcc 11 r=necko-reviewers,dragana

I am aware they are third party code. pushing to keep a trace

Differential Revision: https://phabricator.services.mozilla.com/D100323